[package]
name = "minihttp"
version = "0.2.0"
authors = ["Erich Schudt <erich_schudt@live.com>"]
license = "MIT"
readme = "README.md"
description = "minihttp is a simple and lightweight http client lib for rust."
include = ["src/*.rs", "Cargo.toml"]
repository = "https://github.com/eschudt/minihttp"

[dependencies]
miniurl = "0.1.3"
minihttpse = "0.1.6"
native-tls = "0.2"
