[package]
name = "minihttp"
version = "0.2.1"
authors = ["Erich Schudt <erich_schudt@live.com>"]
license = "MIT"
readme = "README.md"
description = "minihttp is a simple and lightweight http client lib for rust."
include = ["src/*.rs", "Cargo.toml"]
repository = "https://github.com/eschudt/minihttp"

[dependencies]
miniurl = { version = "0.1.3", registry = "crates" }
minihttpse = { version = "0.1.6", registry = "crates" }
native-tls = { version = "0.2", registry = "crates" }